# esp32project

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/md5/: CMakeLists.txt  component.mk  md5.c
main/: CMakeLists.txt  common.h  smartconfig_main.c  u8g2_oled.c  wifi_config.c  wifi_eraseconfig.c  wifi_http.c  wifi_main.c  wifi_mqtt.c  wifi_sniffer.c
